# sa-models

./: MIGRATION_GUIDE.md  README.md  create.sql  gretsch_g5420t.json  guitar-registry-shared-models.code-workspace  pyproject.toml
examples/: eddie_usage.py
schema-and-docs/: README_guitar_processor.md  create.sql
src/guitar_registry_shared_models/: __init__.py  guitar_models.py  validation.py
src/sa_models/: guitar-registry-shared-models.code-workspace  guitar_models.py
tests/: test_models.py
