[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sa-models"
version = "0.1.0"
description = "Shared Pydantic models for guitar registry data structures"
readme = "README.md"
license = {text = "GNU Affero General Public License v3"}
authors = [
    {name = "Mariano Rozanski", email = "your-email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mrozanski/sa-models"
Repository = "https://github.com/mrozanski/sa-models"
Issues = "https://github.com/mrozanski/sa-models/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sa_models"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
